syntax = "proto3";

package media;

service MediaService {
  rpc GeneratePresignedUrl (PresignRequest) returns (PresignResponse);
  rpc ConfirmUpload (ConfirmRequest) returns (ConfirmResponse);
}

message PresignRequest {
  string service = 1;
  string resourceType = 2;
  string resourceId = 3;
  string fileExtension = 4;
  string contentType = 5;
}

message PresignResponse {
  string presignedUrl = 1;
  string key = 2;
}

message ConfirmRequest {
  string key = 1;
  string service = 2;
  string resourceId = 3;
}

message ConfirmResponse {
  bool success = 1;
  string message = 2;
}
